Issue #2996702 by bryrock, bandanasharma, tbfisher: Add Config and Help links to the module listing on Extend page

--- a/applenews.info.yml
+++ b/applenews.info.yml
@@ -3,5 +3,6 @@ description: Push content to Apple News.
 type: module
 core: 8.x
 package: Apple News
+configure: applenews.settings
 dependencies:
   - drupal:serialization
