Issue #3060012 by m4olivei: Publish and preview don't work as expected
Squashed commit of the following:

commit 0bb500648ad4202a74399b799686c62bb9b8a7ca
Author: Matthew Oliveira <m4olivei@gmail.com>
Date:   Tue Jun 11 10:45:26 2019 -0400

    Issue #3060012 Detect live to preview transitions and delete the article from Apple News in such cases

commit 9f407cadb3c377b1c2d24fca4d7d062c593d616c
Author: Matthew Oliveira <m4olivei@gmail.com>
Date:   Fri Jun 7 12:24:30 2019 -0400

    Issue #3060012 Adjust automatic behavior so that it automatically switches the Apple News article to Published when the node changes from unpublished to published

commit bc4ef1832c38b1a89f16ff919fc7859540f993c9
Author: Matthew Oliveira <m4olivei@gmail.com>
Date:   Fri Jun 7 08:33:00 2019 -0400

    Issue #3060012 Adjustments to \Drupal\applenews\ApplenewsManager::getFields method

commit 23f63b7485ee0bae5473a3944ac618c746e6bd17
Author: Matthew Oliveira <m4olivei@gmail.com>
Date:   Thu Jun 6 15:43:58 2019 -0400

    Issue #3060012 Enforce AppleNews article deletion when Publish to Apple News is unchecked

commit 3e3446808446ccd4ef5be052c4ff720c7b924c14
Author: Matthew Oliveira <m4olivei@gmail.com>
Date:   Thu Jun 6 15:20:05 2019 -0400

    Issue #3060012 Enforce preview when we can determine that the entity is unpublished

commit c520ff4d3d75c1f2d6c54667853b672a3662ea19
Author: Matthew Oliveira <m4olivei@gmail.com>
Date:   Thu Jun 6 14:27:36 2019 -0400

    Issue #3060012 Open the Apple News settings when the article is published

commit 753b89ab60d0a9aa94739b254ab153d571d7555d
Author: Matthew Oliveira <m4olivei@gmail.com>
Date:   Thu Jun 6 14:23:01 2019 -0400

    Issue #3060012 Respect the is_preview flag on applenews fields

--- a/applenews.services.yml
+++ b/applenews.services.yml
@@ -36,7 +36,7 @@ services:
     arguments: ['applenews']
   applenews.manager:
     class: Drupal\applenews\ApplenewsManager
-    arguments: ['@entity_type.manager','@entity_field.manager', '@config.factory', '@string_translation', '@serializer', '@applenews.publisher']
+    arguments: ['@entity_type.manager','@entity_field.manager', '@config.factory', '@string_translation', '@serializer', '@applenews.publisher', '@logger.channel.applenews', '@messenger']
   applenews.publisher:
     class: Drupal\applenews\Publisher
     arguments: ['@config.factory']
