--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "name": "drupal/applenews",
   "description": "Push Drupal content to Apple News.",
   "type": "drupal-module",
-  "minimum-stability": "dev",
   "require": {
-    "chapter-three/apple-news-api": "dev-master"
+    "chapter-three/apple-news-api": "^0.3.11"
   }
 }
